--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,12 @@ pandas==1.5.3
 requests==2.27.1
 requests-toolbelt==1.0.0
 starlette==0.20.0
+protobuf==3.20.0
+boto3==1.21.42
+cloudpickle==2.0.0
+torch==1.12.0
+pretty-errors==1.2.25
+PyYAML==6.0
+numpy==1.23.5
+click==8.1.3
+lightgbm==3.3.2
